--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -31,6 +31,10 @@
       /* align-items: flex-end;  */
       padding: 2px;
   }
+  img {
+      max-width: 100%;
+      max-height: 70%;
+  }
 
   .header .medal>strong {
     display: flex;
