--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -60,6 +60,7 @@ ul,li { list-style-type: none;
     margin:0;
     padding:0; 
     display: inline-flex;
+    justify-content: space-around;
 }
 
 .footer {
