--- a/src/container/Teams/Teams.css
+++ b/src/container/Teams/Teams.css
@@ -5,3 +5,13 @@ body {
 .teampage {
     margin-top: 72px;
 }
+.Teams {
+    width: 250px;
+    padding: 16px;
+    text-align: center;
+    border: 1px solid #eee;
+    box-shadow: 0 2px 3px #ccc;
+    margin: 10px;
+    box-sizing: border-box;
+    cursor: pointer;
+}
