--- a/src/container/Teams/Teams.css
+++ b/src/container/Teams/Teams.css
@@ -3,9 +3,10 @@ body {
 }
 
 .teampage {
-    margin-top: 72px;
+    margin-top: 12px;
+    background-color: mediumturquoise;
 }
-.Teams {
+.TeamCard {
     width: 250px;
     padding: 16px;
     text-align: center;
@@ -14,4 +15,18 @@ body {
     margin: 10px;
     box-sizing: border-box;
     cursor: pointer;
+}
+
+.Teams {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+ul{
+    list-style-type: none;
+    padding: none
+}
+
+li{
+    padding: none;
 }
