--- a/src/container/Teams/Teams.css
+++ b/src/container/Teams/Teams.css
@@ -7,14 +7,14 @@ body {
     background-color: mediumturquoise;
 }
 .TeamCard {
-    width: 250px;
+    width: 300px;
     padding: 16px;
     text-align: center;
     border: 1px solid #eee;
     box-shadow: 0 2px 3px #ccc;
     margin: 10px;
     box-sizing: border-box;
-    cursor: pointer;
+    cursor: pointer; 
 }
 
 .Teams {
@@ -30,9 +30,9 @@ body {
 
 ul{
     list-style-type: none;
-    padding: none
+    padding: 0px
 }
 
 li{
-    padding: none;
+    padding: 0px;
 }
